--- a/incremental/App.tsx.1
+++ b/incremental/App.tsx.1
@@ -2,23 +2,18 @@ import './App.css'
 
 function App() {
 
+  const ofThree = [0,1,2]
+
     return (
       <>
-        <div className="board-row">
-          <button className="square">1</button>
-          <button className="square">2</button>
-          <button className="square">3</button>
-        </div>
-        <div className="board-row">
-          <button className="square">4</button>
-          <button className="square">5</button>
-          <button className="square">6</button>
-        </div>
-        <div className="board-row">
-          <button className="square">7</button>
-          <button className="square">8</button>
-          <button className="square">9</button>
-        </div>
+        {
+          ofThree.map((i) => 
+          (
+            <div className="board-row">
+              {ofThree.map((j) => (<button className="square">X</button>))}
+            </div>
+          ))
+        }
       </>
     )
 }
